# levity

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLUGINS.md  QUICKSTART.md  README.md  docker-compose-debug.yml  docker-compose-prod.yml  docker-compose.full-tls.yml  docker-compose.full.yml  docker-compose.test.yml  docker-compose.yml  example_client.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml
be/: .gitignore  Dockerfile  manage.py  pyproject.toml  pytest.ini
be/cp/: apps.py
be/cp/management/commands/: consume_rpc_queue.py
be/cp/models/: charge_point.py  message.py  meter_value.py  transaction.py  websocket_event.py
be/cp/services/: charge_point_service.py  queue_consumer.py
be/cp/services/handler/: ocpp_message_handler.py  websocket_event_handler.py
be/cp/services/handler/ocpp/: base.py  boot.py  meter_values.py  start_transaction.py  status_notification.py  stop_transaction.py
be/cp/types/: action.py  actor_type.py  authorization_status.py  charge_point_error.py  charge_point_status.py  message_type.py  registration_status.py  stop_reason.py  websocket_event_type.py
be/cp/utils/model/: model_enum.py  timestamped.py
be/levity/: asgi.py  settings.py  urls.py  wsgi.py
be/ocpp/: admin.py  apps.py
be/ocpp/management/commands/: consume_rpc_queue.py  correct_meter_values.py  run_report.py
be/ocpp/migrations/: 0001_initial.py  0002_message_call_error.py  0003_chargepoint_name.py  0004_remove_transaction_remote_started_at_and_more.py  0005_chargepoint_hw_iccid.py  0006_chargepoint_hw_imsi.py  0007_metervalue_is_incorrect_transaction_meter_correction.py
be/ocpp/models/: __init__.py  charge_point.py  message.py  meter_value.py  transaction.py  websocket_event.py
be/ocpp/receivers/: __init__.py
be/ocpp/receivers/logging/: fluent_logger.py
be/ocpp/receivers/metrics/: event_counter.py
be/ocpp/scripts/: pg_restore.sh
be/ocpp/services/: charge_point_message_handler.py  charge_point_service.py  ocpp_message_handler.py  queue_consumer.py  queue_publisher.py  websocket_event_handler.py
be/ocpp/services/ocpp/: base.py  boot_notification.py  meter_values.py  start_transaction.py  status_notification.py  stop_transaction.py
be/ocpp/services/ocpp/anon/: auto_remote_start.py
be/ocpp/services/ocpp/automation/: orphaned_transaction.py
be/ocpp/services/ocpp/core/: authorize.py  boot_notification.py  data_transfer.py  diagnostics_status_notification.py  firmware_status_notification.py  heartbeat.py  meter_values.py  start_transaction.py  status_notification.py  stop_transaction.py
be/ocpp/tests/: factory.py  test_messages.txt
be/ocpp/tests/services/ocpp/anon/: test_auto_remote_start.py
be/ocpp/tests/services/ocpp/automation/: test_orphaned_transaction.py
be/ocpp/tests/services/ocpp/core/: test_boot_notification.py  test_status_notification.py
be/ocpp/types/: action.py  actor_type.py  authorization_status.py  charge_point_error.py  charge_point_status.py  data_transfer_status.py  error_code.py  message_type.py  registration_status.py  stop_reason.py  websocket_event_type.py
be/ocpp/utils/: date.py  serialization.py  settings.py
be/ocpp/utils/model/: model_enum.py
be/scripts/: docker-start.sh
examples/: server_with_fluentd.py  server_with_plugins.py  server_with_prometheus.py
examples/fluent/: docker-compose.yml  fluent-bit.conf
examples/fluentd/: README.md  docker-compose.yml  fluent.conf
examples/grafana/alerts/: ocpp-alerts.json
examples/prometheus/: README.md  docker-compose.yml  prometheus.yml
fe/: Dockerfile  app.conf
fe-tls/: Dockerfile
fe-tls/conf/: app-tls-template.conf
fluentd/: Dockerfile  fluent.conf
grafana/: ALERTS_SETUP.md  README.md
grafana/alerts/: ocpp-alerts.json
grafana/dashboards/: ocpp-central-system.json
nginx/: app.conf
rabbitmq/: Dockerfile
reference/: Client side usage — ocpp 2.1.0 documentation.html  Server side usage — ocpp 2.1.0 documentation.html  prom_instrumentation.md
sql/: 001_initial.up.sql
src/levity/: __init__.py  logging_utils.py  main.py  server.py
src/levity/database/: __init__.py  connection.py
src/levity/handlers/: __init__.py  charge_point.py
src/levity/models/: __init__.py  domain.py
src/levity/plugins/: __init__.py  auto_remote_start.py  base.py  fluentd_audit.py  orphaned_transaction.py  prometheus_metrics.py
src/levity/repositories/: __init__.py  base.py  charge_point.py  connector.py  meter_value.py  transaction.py
tests/: __init__.py  conftest.py  test_fluentd_plugin.py  test_integration.py  test_plugins.py  test_prometheus_plugin.py  test_repositories.py
ws/: Dockerfile  main.py  pyproject.toml  util.py
ws/src/levity_ws/: cancellable_iterator.py  charge_point_client.py  config.py  cp.py  global_context.py  main.py  rpc.py  server.py  types.py
ws/tests/: test_messaging.py  test_websocket.py
