[project]
name = "levity"
version = "0.1.0"
description = "OCPP Central System with SQLite storage"
readme = "README.md"
authors = [
    { name = "Keith Grennan", email = "keith@nearlyfree.org" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "fluent-logger>=0.11.1",
    "ocpp>=2.1.0",
    "prometheus-client>=0.23.1",
    "websockets>=15.0.1",
]

[project.scripts]
levity = "levity.main:run"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]

[tool.ruff]
# Set line length to 100 characters
line-length = 100
target-version = "py313"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]

# Ignore specific rules that may be too strict
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "TID252",  # Prefer absolute imports (relative imports are fine for internal modules)
    "A002",    # Argument shadowing builtin (id is commonly used for identifiers in APIs)
    "ARG002",  # Unused method argument (OCPP handlers need all args for signature match)
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Allow print statements in example_client.py
"example_client.py" = ["T201"]
# Test files can have longer functions and classes, imports anywhere, and use try-except-pass
"tests/**/*.py" = ["PLR0915", "PLC0415", "SIM105"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "websocket: WebSocket tests",
]
