[tool.poetry]
name = "levity-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
python-dateutil = "^2.8.2"
dj-database-url = "^1.3.0"
retry = "^0.9.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
prometheus-client = "^0.16.0"
pyyaml = "6.0.1"
pytz = "^2023.3"
fluent-logger = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
black = "^23.3.0"
pre-commit = "^3.2.2"
flake8-bugbear = "^23.3.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
